--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
     "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/addon-themes": "^8.0.8",
     "@storybook/blocks": "^8.0.8",
     "@storybook/nextjs": "^8.0.8",
     "@storybook/react": "^8.0.8",
@@ -33,6 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -42,7 +45,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.0.0",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "storybook": "^8.0.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
