--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "axios": "^1.6.8",
     "next": "14.2.0",
     "react": "^18",
